@@ -1,8 +1,8 @@
 <title>LilyPond 2.10 now available</title>
 
-<h1>LilyPond version 2.10 available - 10 years anniversary release</h1>
+<h1>LilyPond version 2.10 available&mdash;10 years anniversary release</h1>
 
-Utrecht the Netherlands--November, 2006.
+Utrecht the Netherlands&mdash;November, 2006.
 <p>
 The initial inspiration for LilyPond came ten years ago when two
 musician friends grew disappointed with the bland and boring look of
@@ -56,12 +56,14 @@ nested tuplets, and much more.
 </ul>
 
 That's not all, check out
-<pre>
+<blockquote>
+<tt>
    <a
    href="http://lilypond.org/doc/v2.10/Documentation/topdocs/NEWS.html">
    http://lilypond.org/doc/v2.10/Documentation/topdocs/NEWS.html
    </a>
-</pre>
+</tt>
+</blockquote>
 for all changes.
 
 <hr>
