@@ -1,5 +1,8 @@
 2006-11-03  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* site/announce-v2.10.html: use &mdash
+	don't use <pre> 
+
 	* site/news.ihtml (href): 2.9.28
 
 2006-11-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
